updated project pom, settings and jenkinsfile